adding adminAuth middleware, changes in utilizador table, changes in reportsRoutes and policeRoutes
